# autodrive

./: .flake8  .gitignore  README.md  api.py  main.py  pyproject.toml  requirements.rtd.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: autodrive-publish.yml  autodrive-test.yml
autodrive/: __init__.py  __init__.pyi  _conn.py  _conn.pyi  _core.py  _core.pyi  _google_terms.py  _google_terms.pyi  _view.py  _view.pyi  connection.py  connection.pyi  core.py  drive.py  drive.pyi  dtypes.py  dtypes.pyi  google_terms.py  gsheet.py  gsheet.pyi  interfaces.py  interfaces.pyi  range.py  range.pyi  tab.py  tab.pyi  typing.py  typing.pyi
autodrive/formatting/: __init__.py  __init__.pyi  _cell.py  _cell.pyi  _grid.py  _grid.pyi  _text.py  _text.pyi  cell.py  format_rng.py  format_rng.pyi  format_tab.py  format_tab.pyi  formatting.py  grid.py  text.py
docs/: Makefile
docs/source/: autodrive.formatting.rst  basic_use.rst  batching.rst  conf.py  cust_config.rst  format.rst  index.rst  interface.rst  modules.rst  output.rst  upload.rst
gsheet_api/: api.py  drive.py  formatting.py  gsheet.py  sheets.py
lib/: api.py  schema.py  schema_test.py
scripts/: get_tokens.py  update_tokens.py
sheets/: __main__.py  example.py
tests/: api_test.py  cell_test.py  conftest.py  connection_test.py  core_test.py  crud_test.py  dtypes_test.py  format_rng_test.py  format_tab_test.py  formatting_test.py  grid_test.py  gsheet_test.py  interfaces_test.py  range_test.py  schema_test.py  sheets_test.py  test_cell.py  test_conn.py  test_connection.py  test_formatting.py  test_gsheet.py  test_interfaces.py  test_output.py  test_tab.py  test_text.py  test_view.py  testing_tools.py  text_test.py  typing_test.py  view_test.py
tests/samples/: data.py
