[tool.poetry]
name = "autodrive"
version = "0.5.0"
description = "Simple but robust tool for interacting with the Google Drive and Sheets apis via python."
authors = ["Chris Larabee"]
license = "GNU"
readme = "README.md"
repository = "https://github.com/chrislarabee/autodrive"
documentation = "https://autodrive-py.readthedocs.io/en/latest/"
keywords = ["google-sheets", "google-drive", "google"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.0.2"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.3"
jsonlines = "^2.0.0"
google-api-python-client-stubs = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8-black = "^0.2.1"
rope = "^0.18.0"
pytest-mock = "^3.5.1"
wheel = "^0.36.2"
mypy = "^0.812"
Sphinx = "^4.0.2"
pyment = "^0.3.3"
sphinx-rtd-theme = "^0.5.2"
sphinx-autoapi = "^1.8.1"
pandas = "^1.3.0"
PyNaCl = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
