[project]
name = "autodrive"
version = "0.7.0"
description = "Simple but robust tool for interacting with the Google Drive and Sheets apis via python."
authors = [{name="Chris Larabee"}]
license = "GNU"
readme = "README.md"
keywords = ["google-sheets", "google-drive", "google"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.197.0"
google-auth-httplib2 = "^0.4.0"
google-auth-oauthlib = "^1.4.0"
jsonlines = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
flake8-black = "^0.4.0"
rope = "^0.18.0"
pytest-mock = "^3.5.1"
wheel = "^0.47.0"
Sphinx = "^4.0.2"
pyment = "^0.3.3"
sphinx-rtd-theme = "^0.5.2"
sphinx-autoapi = "^1.8.1"
PyNaCl = "^1.4.0"
toml = "^0.10.2"
mypy = "^2.1.0"
google-api-python-client-stubs = "^1.37.0"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
